prevent vert scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,10 @@
 .icon.right {
   right: 0;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
